Fixed footer for all the website on mobile Fixed the mobile menu and made it more stylish

--- a/components/menu.module.css
+++ b/components/menu.module.css
@@ -124,25 +124,16 @@
     position: relative;
     text-transform: uppercase;
     font-weight: 500;
+    margin-top: -5% !important;
 }
 .mingcutewallet4FillParent {
-    position: absolute;
-    top: 280px;
-    left: calc(50% - 168px);
-    border-radius: 10px;
     background: linear-gradient(180deg, #ffe500, #fff492);
     backdrop-filter: blur(12px);
-    width: 336px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 12px 70px;
-    box-sizing: border-box;
-    gap: 10px;
-    text-align: left;
-    font-size: 18px;
     font-family: 'Neue Montreal';
+}
+
+.mingcutewallet4FillParent button{
+    padding-top: 0px !important;
 }
 .materialSymbolscloseIcon1 {
     position: absolute;
@@ -216,7 +207,7 @@
     position: relative;
     background: linear-gradient(180deg, #201d26, #1d1b20);
     width: 100%;
-    height: 45vh;
+    height: fit-content;
     overflow-x: hidden;
     border-radius: 10px;
     border: 1px #160f1e !important;
